2007-09-17  Zeeshan Ali  <zeenix@gstreamer.net>

	* src/universal-cp.c:

	Search for "upnp:rootdevice" rather than "ssdp:all".

2007-09-17  Zeeshan Ali  <zeenix@gstreamer.net>

	* src/universal-cp-devicetreeview.c:

	Fix some resource ref and GList leakage.

2007-09-17  Zeeshan Ali  <zeenix@gstreamer.net>

	* src/universal-cp-gui.c:
	* src/universal-cp.c:
	* src/universal-cp.h:

	- The main module exits the mainloop
	- GUI and UPnP objects are destroyed before exiting the mainloop. This
	  is to allow the service proxies to unsubscribe themselves.

2007-09-17  Zeeshan Ali  <zeenix@gstreamer.net>

	* src/network-light-upnp.c:

	Print more details on the console for each failed notification.

2007-09-16  Zeeshan Ali  <zeenix@gstreamer.net>

	* src/network-light-gui.c:
	* src/pixmaps/Makefile.am:
	* src/pixmaps/network-light-22x22.png:
	* src/pixmaps/network-light-256x256.png:
	* src/pixmaps/network-light.png:
	* src/xml/network-light-desc.xml:

	Keep the network light icon in two sizes, one small and one big so
	control points have a bit more choice.

2007-09-16  Zeeshan Ali  <zeenix@gstreamer.net>

	* src/universal-cp-icons.c:

	Use LARGE_TOOLBAR as icon size instead of DIALOG when rendering icons
	from stock.

2007-09-16  Zeeshan Ali  <zeenix@gstreamer.net>

	* src/gupnp-universal-cp.glade:

	Put a little more space between children of action-invocation-table.

2007-09-16  Zeeshan Ali  <zeenix@gstreamer.net>

	* src/universal-cp-actiondialog.c:

	Put static labels of action dialog into a sizegroup.

2007-09-15  Zeeshan Ali  <zeenix@gstreamer.net>

	* src/universal-cp-icons.c:

	Use the best interpolation method available.

2007-09-15  Zeeshan Ali  <zeenix@gstreamer.net>
	Lapo Calamandrei  <calamandrei@gmail.com>

	* src/pixmaps/network-light.png:

	Icon update for network-light.

2007-09-14  Zeeshan Ali  <zeenix@gstreamer.net>

	* src/network-light-gui.c:
	* src/universal-cp-icons.c:

	Use g_build_filename() instead of g_strjoin() for filenames.
