@@ -203,5 +203,6 @@ setup_details_treeview (GladeXML *glade_xml)
         g_assert (model != NULL);
 
         setup_treeview (treeview, model, headers, 0);
+        g_object_unref (model);
 }
 
